styles/styles.css
/* Diego Section */
/* html {
  font-size: 1.3vmax;
} */

body {
  font-family: Arial, Helvetica, sans-serif;
  line-height: 1.2;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: Georgia, "Times New Roman", Times, serif;
}

h1 {
  text-align: center;
  margin-bottom: 6rem;
  font-size: 5rem;
}

h2 {
  margin-top: 7%;
}

/* Stefan Sections */
#mainNavbar {
  position: fixed;
  width: 100%;
  background-color: rgba(139, 195, 74, 1);
  margin-bottom: 2rem;
  text-transform: uppercase;
  z-index: 1;
}
#mainNavbar.scrolled {
  background: rgba(139, 195, 74, 0.5);
  transition: background 500ms ease-in-out;
}
.navbar-brand {
  width: fit-content;
}
.logo {
  /* width: 20%; */
  height: auto;
  max-width: 40px;
}

.navbar {
  width: 80%;
  margin: auto;
  padding: 0;
  align-items: center;
}
#navbarSupportedContent {
  justify-content: right;
}

.dropdown-menu {
  background-color: rgba(139, 195, 74, 1);
}
.dropdown-item {
  color: white;
}
.dropdown-item:hover {
  background-color: rgba(208, 221, 214, 0.5);
}

main {
  padding-top: 9rem;
  width: 80%;
  margin: auto;
}

a {
  color: inherit;
}

a:hover {
  text-decoration: none;
  color: rgba(139, 195, 74, 1);
}

.recipe-container {
  /*max-width: 30%;*/
  padding-bottom: 5%;
}

.img-container {
  width: 100%;
  height: 20vw;
  margin: auto;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.35);
  -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.35);
  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.35);
  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.35);
  border-radius: 3px;
  transition: all 0.2s ease;
}

.img-container:hover {
  -webkit-box-shadow: 7px 7px 5px 0px rgba(139, 195, 74, 1);
  -moz-box-shadow: 7px 7px 5px 0px rgba(139, 195, 74, 1);
  box-shadow: 7px 7px 5px 0px rgba(139, 195, 74, 1);
  transform: scale(1.05);
  transition: 1s;
}

.row img {
  width: 100%;
  min-height: 100%;
}

.grid {
  text-align: center;
}

.row {
  justify-content: space-between;
}

